--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block title %} - Page Not Found{% endblock %}
 {% block content %}
-  <h1>Something went wrong! (404)</h1>
+
+  <h1 style="margin-top:20%">Something went wrong! (404)</h1>
   <p>
     <hr>
     Make sure you didn't write a '/' at the end of the url.<br>
