--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@ h1, h2, h3, h4 {
   </head>
   <body>
     {% block navbar %}
-    <div class="navbar navbar-default">
+    <div class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
